OverwatchCompiler.ToWorkshop/antlr/generated/TypescriptParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from TypescriptParser.g4 by ANTLR 4.7.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7.2")]
[System.CLSCompliant(false)]
public partial class TypescriptParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		BYTE_ORDER_MARK=1, SINGLE_LINE_COMMENT=2, DELIMITED_COMMENT=3, WHITESPACES=4, 
		ABSTRACT=5, BOOL=6, BREAK=7, CASE=8, CATCH=9, CLASS=10, CONST=11, CONTINUE=12, 
		DEFAULT=13, DO=14, ELSE=15, ENUM=16, FALSE=17, FINALLY=18, FOR=19, FOREACH=20, 
		GET=21, IF=22, LET=23, NEW=24, NULL=25, OVERRIDE=26, PARAMS=27, PRIVATE=28, 
		PROTECTED=29, PUBLIC=30, READONLY=31, RETURN=32, SET=33, STATIC=34, STRING=35, 
		SWITCH=36, THIS=37, THROW=38, TRUE=39, TRY=40, VAR=41, VOID=42, WHILE=43, 
		NUMBER=44, SUPER=45, MODULE=46, OF=47, IMPORT=48, FUNCTION=49, CONSTRUCTOR=50, 
		EXPORT=51, AS=52, EXTENDS=53, IDENTIFIER=54, LITERAL_ACCESS=55, INTEGER_LITERAL=56, 
		HEX_INTEGER_LITERAL=57, REAL_LITERAL=58, REGULAR_STRING=59, SINGLE_QUOTE_STRING_LITERAL=60, 
		OPEN_BRACE=61, CLOSE_BRACE=62, OPEN_BRACKET=63, CLOSE_BRACKET=64, OPEN_PARENS=65, 
		CLOSE_PARENS=66, DOT=67, COMMA=68, COLON=69, SEMICOLON=70, PLUS=71, MINUS=72, 
		STAR=73, DIV=74, PERCENT=75, AMP=76, BITWISE_OR=77, CARET=78, BANG=79, 
		TILDE=80, ASSIGNMENT=81, LT=82, GT=83, INTERR=84, DOUBLE_COLON=85, OP_COALESCING=86, 
		OP_INC=87, OP_DEC=88, OP_AND=89, OP_OR=90, OP_PTR=91, OP_EQ=92, OP_NE=93, 
		OP_LE=94, OP_GE=95, OP_ADD_ASSIGNMENT=96, OP_SUB_ASSIGNMENT=97, OP_MULT_ASSIGNMENT=98, 
		OP_DIV_ASSIGNMENT=99, OP_MOD_ASSIGNMENT=100, OP_AND_ASSIGNMENT=101, OP_OR_ASSIGNMENT=102, 
		OP_XOR_ASSIGNMENT=103, OP_LEFT_SHIFT=104, OP_LEFT_SHIFT_ASSIGNMENT=105, 
		DIRECTIVE_WHITESPACES=106, DIGITS=107, DEFINE=108, UNDEF=109, ELIF=110, 
		ENDIF=111, LINE=112, ERROR=113, WARNING=114, REGION=115, ENDREGION=116, 
		PRAGMA=117, DIRECTIVE_HIDDEN=118, CONDITIONAL_SYMBOL=119, DIRECTIVE_NEW_LINE=120, 
		TEXT=121;
	public const int
		RULE_sourceFiles = 0, RULE_sourceFile = 1, RULE_importDeclaration = 2, 
		RULE_moduleOrTypeName = 3, RULE_typeList = 4, RULE_typeInOptionalParenthesis = 5, 
		RULE_type = 6, RULE_baseType = 7, RULE_primitiveType = 8, RULE_classType = 9, 
		RULE_typeArgumentList = 10, RULE_functionType = 11, RULE_argumentList = 12, 
		RULE_argument = 13, RULE_expression = 14, RULE_nonAssignmentExpression = 15, 
		RULE_assignment = 16, RULE_assignmentOperator = 17, RULE_conditionalOrExpression = 18, 
		RULE_conditionalAndExpression = 19, RULE_equalityExpression = 20, RULE_castExpression = 21, 
		RULE_relationalExpression = 22, RULE_additiveExpression = 23, RULE_multiplicativeExpression = 24, 
		RULE_unaryExpression = 25, RULE_primaryExpression = 26, RULE_nativeMethodInvocationStatement = 27, 
		RULE_primaryExpressionStart = 28, RULE_expressionList = 29, RULE_memberAccess = 30, 
		RULE_bracketExpression = 31, RULE_lambdaExpression = 32, RULE_anonymousFunctionSignature = 33, 
		RULE_explicitAnonymousFunctionParameterList = 34, RULE_explicitAnonymousFunctionParameter = 35, 
		RULE_implicitAnonymousFunctionParameterList = 36, RULE_anonymousFunctionBody = 37, 
		RULE_statement = 38, RULE_embeddedStatement = 39, RULE_simpleEmbeddedStatement = 40, 
		RULE_block = 41, RULE_variableDeclaration = 42, RULE_variableType = 43, 
		RULE_variableDeclarator = 44, RULE_switchSection = 45, RULE_switchLabel = 46, 
		RULE_statementList = 47, RULE_forInitializer = 48, RULE_forIterator = 49, 
		RULE_moduleDeclaration = 50, RULE_moduleBody = 51, RULE_moduleMemberDeclarations = 52, 
		RULE_moduleMemberDeclaration = 53, RULE_functionDeclaration = 54, RULE_typeDeclaration = 55, 
		RULE_typeParameterList = 56, RULE_typeParameter = 57, RULE_classBody = 58, 
		RULE_classMemberDeclarations = 59, RULE_classMemberDeclaration = 60, RULE_allMemberModifiers = 61, 
		RULE_allMemberModifier = 62, RULE_commonMemberDeclaration = 63, RULE_typedMemberDeclaration = 64, 
		RULE_classField = 65, RULE_returnTypeList = 66, RULE_returnType = 67, 
		RULE_methodBody = 68, RULE_formalParameterList = 69, RULE_fixedParameters = 70, 
		RULE_fixedParameter = 71, RULE_constructorInitializer = 72, RULE_body = 73, 
		RULE_variantTypeParameterList = 74, RULE_variantTypeParameter = 75, RULE_enumBody = 76, 
		RULE_enumMemberDeclaration = 77, RULE_rightArrow = 78, RULE_rightShift = 79, 
		RULE_rightShiftAssignment = 80, RULE_literal = 81, RULE_booleanLiteral = 82, 
		RULE_stringLiteral = 83, RULE_classDefinition = 84, RULE_enumDefinition = 85, 
		RULE_constructorDeclaration = 86, RULE_methodDeclaration = 87, RULE_getterDeclaration = 88, 
		RULE_setterDeclaration = 89, RULE_argDeclaration = 90, RULE_methodInvocation = 91, 
		RULE_objectCreationExpression = 92, RULE_identifier = 93;
	public static readonly string[] ruleNames = {
		"sourceFiles", "sourceFile", "importDeclaration", "moduleOrTypeName", 
		"typeList", "typeInOptionalParenthesis", "type", "baseType", "primitiveType", 
		"classType", "typeArgumentList", "functionType", "argumentList", "argument", 
		"expression", "nonAssignmentExpression", "assignment", "assignmentOperator", 
		"conditionalOrExpression", "conditionalAndExpression", "equalityExpression", 
		"castExpression", "relationalExpression", "additiveExpression", "multiplicativeExpression", 
		"unaryExpression", "primaryExpression", "nativeMethodInvocationStatement", 
		"primaryExpressionStart", "expressionList", "memberAccess", "bracketExpression", 
		"lambdaExpression", "anonymousFunctionSignature", "explicitAnonymousFunctionParameterList", 
		"explicitAnonymousFunctionParameter", "implicitAnonymousFunctionParameterList", 
		"anonymousFunctionBody", "statement", "embeddedStatement", "simpleEmbeddedStatement", 
		"block", "variableDeclaration", "variableType", "variableDeclarator", 
		"switchSection", "switchLabel", "statementList", "forInitializer", "forIterator", 
		"moduleDeclaration", "moduleBody", "moduleMemberDeclarations", "moduleMemberDeclaration", 
		"functionDeclaration", "typeDeclaration", "typeParameterList", "typeParameter", 
		"classBody", "classMemberDeclarations", "classMemberDeclaration", "allMemberModifiers", 
		"allMemberModifier", "commonMemberDeclaration", "typedMemberDeclaration", 
		"classField", "returnTypeList", "returnType", "methodBody", "formalParameterList", 
		"fixedParameters", "fixedParameter", "constructorInitializer", "body", 
		"variantTypeParameterList", "variantTypeParameter", "enumBody", "enumMemberDeclaration", 
		"rightArrow", "rightShift", "rightShiftAssignment", "literal", "booleanLiteral", 
		"stringLiteral", "classDefinition", "enumDefinition", "constructorDeclaration", 
		"methodDeclaration", "getterDeclaration", "setterDeclaration", "argDeclaration", 
		"methodInvocation", "objectCreationExpression", "identifier"
	};

	private static readonly string[] _LiteralNames = {
		null, "'\u00EF\u00BB\u00BF'", null, null, null, "'abstract'", "'boolean'", 
		"'break'", "'case'", "'catch'", "'class'", "'const'", "'continue'", "'default'", 
		"'do'", "'else'", "'enum'", "'false'", "'finally'", "'for'", "'foreach'", 
		"'get'", "'if'", "'let'", "'new'", "'null'", "'override'", "'params'", 
		"'private'", "'protected'", "'public'", "'readonly'", "'return'", "'set'", 
		"'static'", "'string'", "'switch'", "'this'", "'throw'", "'true'", "'try'", 
		"'var'", "'void'", "'while'", "'number'", "'super'", "'module'", "'of'", 
		"'import'", "'function'", "'constructor'", "'export'", "'as'", "'extends'", 
		null, null, null, null, null, null, null, "'{'", "'}'", "'['", "']'", 
		"'('", "')'", "'.'", "','", "':'", "';'", "'+'", "'-'", "'*'", "'/'", 
		"'%'", "'&'", "'|'", "'^'", "'!'", "'~'", "'='", "'<'", "'>'", "'?'", 
		"'::'", "'??'", "'++'", "'--'", "'&&'", "'||'", "'->'", "'=='", "'!='", 
		"'<='", "'>='", "'+='", "'-='", "'*='", "'/='", "'%='", "'&='", "'|='", 
		"'^='", "'<<'", "'<<='", null, null, "'define'", "'undef'", "'elif'", 
		"'endif'", "'line'", null, null, null, null, null, "'hidden'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "BYTE_ORDER_MARK", "SINGLE_LINE_COMMENT", "DELIMITED_COMMENT", "WHITESPACES", 
		"ABSTRACT", "BOOL", "BREAK", "CASE", "CATCH", "CLASS", "CONST", "CONTINUE", 
		"DEFAULT", "DO", "ELSE", "ENUM", "FALSE", "FINALLY", "FOR", "FOREACH", 
		"GET", "IF", "LET", "NEW", "NULL", "OVERRIDE", "PARAMS", "PRIVATE", "PROTECTED", 
		"PUBLIC", "READONLY", "RETURN", "SET", "STATIC", "STRING", "SWITCH", "THIS", 
		"THROW", "TRUE", "TRY", "VAR", "VOID", "WHILE", "NUMBER", "SUPER", "MODULE", 
		"OF", "IMPORT", "FUNCTION", "CONSTRUCTOR", "EXPORT", "AS", "EXTENDS", 
		"IDENTIFIER", "LITERAL_ACCESS", "INTEGER_LITERAL", "HEX_INTEGER_LITERAL", 
		"REAL_LITERAL", "REGULAR_STRING", "SINGLE_QUOTE_STRING_LITERAL", "OPEN_BRACE", 
		"CLOSE_BRACE", "OPEN_BRACKET", "CLOSE_BRACKET", "OPEN_PARENS", "CLOSE_PARENS", 
		"DOT", "COMMA", "COLON", "SEMICOLON", "PLUS", "MINUS", "STAR", "DIV", 
		"PERCENT", "AMP", "BITWISE_OR", "CARET", "BANG", "TILDE", "ASSIGNMENT", 
		"LT", "GT", "INTERR", "DOUBLE_COLON", "OP_COALESCING", "OP_INC", "OP_DEC", 
		"OP_AND", "OP_OR", "OP_PTR", "OP_EQ", "OP_NE", "OP_LE", "OP_GE", "OP_ADD_ASSIGNMENT", 
		"OP_SUB_ASSIGNMENT", "OP_MULT_ASSIGNMENT", "OP_DIV_ASSIGNMENT", "OP_MOD_ASSIGNMENT", 
		"OP_AND_ASSIGNMENT", "OP_OR_ASSIGNMENT", "OP_XOR_ASSIGNMENT", "OP_LEFT_SHIFT", 
		"OP_LEFT_SHIFT_ASSIGNMENT", "DIRECTIVE_WHITESPACES", "DIGITS", "DEFINE", 
		"UNDEF", "ELIF", "ENDIF", "LINE", "ERROR", "WARNING", "REGION", "ENDREGION", 
		"PRAGMA", "DIRECTIVE_HIDDEN", "CONDITIONAL_SYMBOL", "DIRECTIVE_NEW_LINE", 
		"TEXT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "TypescriptParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static TypescriptParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public TypescriptParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public TypescriptParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class SourceFilesContext : ParserRuleContext {
		public SourceFileContext[] sourceFile() {
			return GetRuleContexts<SourceFileContext>();
		}
		public SourceFileContext sourceFile(int i) {
			return GetRuleContext<SourceFileContext>(i);
		}
		public SourceFilesContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_sourceFiles; } }
		public override void EnterRule(IParseTreeListener listener) {
			ITypescriptParserListener typedListener = listener as ITypescriptParserListener;
			if (typedListener != null) typedListener.EnterSourceFiles(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITypescriptParserListener typedListener = listener as ITypescriptParserListener;
			if (typedListener != null) typedListener.ExitSourceFiles(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITypescriptParserVisitor<TResult> typedVisitor = visitor as ITypescriptParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSourceFiles(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SourceFilesContext sourceFiles() {
		SourceFilesContext _localctx = new SourceFilesContext(Context, State);
		EnterRule(_localctx, 0, RULE_sourceFiles);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 191;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,0,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					State = 188; sourceFile();
					}
					} 
				}
				State = 193;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,0,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SourceFileContext : ParserRuleContext {
		public string FilePath;
		public ITerminalNode Eof() { return GetToken(TypescriptParser.Eof, 0); }
		public ITerminalNode BYTE_ORDER_MARK() { return GetToken(TypescriptParser.BYTE_ORDER_MARK, 0); }
		public ImportDeclarationContext[] importDeclaration() {
			return GetRuleContexts<ImportDeclarationContext>();
		}
		public ImportDeclarationContext importDeclaration(int i) {
			return GetRuleContext<ImportDeclarationContext>(i);
		}
		public ModuleMemberDeclarationsContext moduleMemberDeclarations() {
			return GetRuleContext<ModuleMemberDeclarationsContext>(0);
		}
		public SourceFileContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_sourceFile; } }
		public override void EnterRule(IParseTreeListener listener) {
			ITypescriptParserListener typedListener = listener as ITypescriptParserListener;
			if (typedListener != null) typedListener.EnterSourceFile(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITypescriptParserListener typedListener = listener as ITypescriptParserListener;
			if (typedListener != null) typedListener.ExitSourceFile(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITypescriptParserVisitor<TResult> typedVisitor = visitor as ITypescriptParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSourceFile(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SourceFileContext sourceFile() {
		SourceFileContext _localctx = new SourceFileContext(Context, State);
		EnterRule(_localctx, 2, RULE_sourceFile);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 195;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==BYTE_ORDER_MARK) {
				{
				State = 194; Match(BYTE_ORDER_MARK);
				}
			}

			State = 200;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==IMPORT) {
				{
				{
				State = 197; importDeclaration();
				}
				}
				State = 202;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 204;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CLASS) | (1L << CONST) | (1L << ENUM) | (1L << GET) | (1L << LET) | (1L << PRIVATE) | (1L << PUBLIC) | (1L << READONLY) | (1L << SET) | (1L << STATIC) | (1L << VAR) | (1L << NUMBER) | (1L << MODULE) | (1L << FUNCTION) | (1L << EXPORT) | (1L << IDENTIFIER))) != 0)) {
				{
				State = 203; moduleMemberDeclarations();
				}
			}

			State = 206; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ImportDeclarationContext : ParserRuleContext {
		public SourceFileContext TargetFile { get; set; }
			public string TargetPath
		        {
		            get
		            {
		                var parent = (SourceFileContext) Parent;
		                var currentFolder = new FileInfo(parent.FilePath).Directory.FullName;
		                var importPath = Path.Combine(currentFolder, RemoveQuotes(stringLiteral().GetText()));
		                return Path.GetFullPath(importPath);
		            }
		        }

		        private string RemoveQuotes(string s)
		        {
		            return s.Substring(1, s.Length - 2);
		        }
				private string ignoreMe;
		public ITerminalNode IMPORT() { return GetToken(TypescriptParser.IMPORT, 0); }
		public StringLiteralContext stringLiteral() {
			return GetRuleContext<StringLiteralContext>(0);
		}
		public ITerminalNode SEMICOLON() { return GetToken(TypescriptParser.SEMICOLON, 0); }
		public ImportDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_importDeclaration; } }
		public override void EnterRule(IParseTreeListener listener) {
			ITypescriptParserListener typedListener = listener as ITypescriptParserListener;
			if (typedListener != null) typedListener.EnterImportDeclaration(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITypescriptParserListener typedListener = listener as ITypescriptParserListener;
			if (typedListener != null) typedListener.ExitImportDeclaration(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITypescriptParserVisitor<TResult> typedVisitor = visitor as ITypescriptParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitImportDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ImportDeclarationContext importDeclaration() {
		ImportDeclarationContext _localctx = new ImportDeclarationContext(Context, State);
		EnterRule(_localctx, 4, RULE_importDeclaration);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 208; Match(IMPORT);
			State = 209; stringLiteral();
			State = 210; Match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ModuleOrTypeNameContext : ParserRuleContext {
		public IdentifierContext[] identifier() {
			return GetRuleContexts<IdentifierContext>();
		}
		public IdentifierContext identifier(int i) {
			return GetRuleContext<IdentifierContext>(i);
		}
		public ITerminalNode[] DOT() { return GetTokens(TypescriptParser.DOT); }
		public ITerminalNode DOT(int i) {
			return GetToken(TypescriptParser.DOT, i);
		}
		public ModuleOrTypeNameContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_moduleOrTypeName; } }
		public override void EnterRule(IParseTreeListener listener) {
